--- a/calculator/bmicalculator.html
+++ b/calculator/bmicalculator.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
-</head>
+    <title>BMI Calculator</title>
+  </head>
 <body>
     <h1>BMI Calculator</h1>
     <form action="/bmicalculator" method="post">
-    <input type="text" name="weight" placeholder="insert your weigth" />
-    <input type="text" name="heigth" placeholder="insert your heigth"/>
-    <button type="submit" name="submit">Calculate BMI</button>
+    <input type="text" name="we" placeholder="insert your weigth" />
+    <input type="text" name="he" placeholder="insert your heigth"/>
+    <button type="submit" name="button">Calculate BMI</button>
     </form>
 </body>
 </html>
