--- a/WeatherProject/index.html
+++ b/WeatherProject/index.html
@@ -6,7 +6,10 @@
     <title>Weather app</title>
 </head>
 <body>
-    <label for ="cityInput"></label>
-    <input id="cityInput" type="text" name="cityName"/>
+    <form action="/" method="post">
+        <label for ="cityInput">City Name: </label>
+        <input id="cityInput" type="text" name="cityName"/>
+        <button type="submit" name="btn">Submit</button>
+    </form>
 </body>
 </html>
