--- a/Newsletter-Signup/signup.html
+++ b/Newsletter-Signup/signup.html
@@ -22,9 +22,9 @@
     <h1 class="h3 mb-3 fw-normal">Signup to my NewLetter!</h1>
     <!-- <label for="inputEmail" class="visually-hidden">Email address</label> -->
 
-    <input type="text" class="form-control" placeholder="Fisrt Name" required>
-    <input type="text" class="form-control" placeholder="Last Name" required>
-    <input type="email" class="form-control" placeholder="Email address" required autofocus>
+    <input type="text" class="form-control top" placeholder="Fisrt Name" required>
+    <input type="text" class="form-control middle" placeholder="Last Name" required>
+    <input type="email" class="form-control botton" placeholder="Email" required autofocus>
     <!-- <label for="inputPassword" class="visually-hidden">Password</label> -->
 
     <!-- <div class="checkbox mb-3">
